added some error handling, added delete quote by server quote id
