# RaiQuotes-V2/src/main/java/com/example/raiquotesv2/controller/QuoteController.java
@@ -4,6 +4,7 @@ import com.baeldung.openapi.api.QuotesApi;
 import com.baeldung.openapi.model.AddQuoteRequestDto;
 import com.baeldung.openapi.model.QuoteDto;
 import com.example.raiquotesv2.Exception.EndpointApplicationError;
+import com.example.raiquotesv2.Exception.NoQuotesForServerException;
 import com.example.raiquotesv2.Exception.QuoteApiError;
 import com.example.raiquotesv2.Exception.QuoteNotFoundException;
 import com.example.raiquotesv2.service.QuoteService;
@@ -41,8 +42,12 @@ public class QuoteController implements QuotesApi {
     }
 
     public ResponseEntity<QuoteDto> getServerRandomGET(String serverId){
-        QuoteDto output = quoteService.selectRandomQuote(quoteService.getAllServerQuotes(serverId));
-        return new ResponseEntity<>(output, HttpStatus.OK);
+        try{
+            QuoteDto output = quoteService.selectRandomQuote(quoteService.getAllServerQuotes(serverId));
+            return new ResponseEntity<>(output, HttpStatus.OK);
+        }catch(NoQuotesForServerException e){
+            throw new EndpointApplicationError(QuoteApiError.NO_QUOTES_FOR_SERVER, e.getMessage());
+        }
     }
 
     public ResponseEntity<QuoteDto> getQuoteFromServerGET(String serverId, Integer id){
@@ -50,6 +55,15 @@ public class QuoteController implements QuotesApi {
             return new ResponseEntity<>(quoteService.getQuoteByServerAndServerQuoteId(serverId, id), HttpStatus.OK);
         }
         catch (QuoteNotFoundException e){
+            throw new EndpointApplicationError(QuoteApiError.QUOTE_NOT_FOUND, e.getMessage());
+        }
+    }
+
+    public ResponseEntity<Void> deleteQuoteByServerQuoteIdDELETE(String serverId, Integer id){
+        try{
+            quoteService.deleteQuoteByByServerAndServerQuoteId(serverId, id);
+            return new ResponseEntity<>(HttpStatus.OK);
+        }catch(QuoteNotFoundException e){
             throw new EndpointApplicationError(QuoteApiError.QUOTE_NOT_FOUND, e.getMessage());
         }
     }
